# vasp-helper

./: .gitignore  README.md  file_manager.py  pyproject.toml  split_ads_surf.py  vasp_file_manager.py  vasp_helper.py
src/vasphelper/: diff_input_maker.py  file_manager.py  split_ads_surf.py  vasp_file_manager.py  vasp_helper.py
